# globstar

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  bench.mjs  fuzz.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  verify.mjs  vite.config.ts
crates/globstar/: Cargo.toml
crates/globstar-segment/: Cargo.toml
crates/globstar-segment/src/: engine.rs  lib.rs
crates/globstar-segment/src/engine/: compile.rs  exec.rs  mod.rs  seg_nfa.rs
crates/globstar-walk/: Cargo.toml
crates/globstar-walk/benches/: walker.rs
crates/globstar-walk/src/: entry.rs  error.rs  lib.rs  options.rs
crates/globstar-walk/tests/: walk.rs
crates/globstar/benches/: compiler_stages.rs  matcher_multi.rs  matcher_single.rs
crates/globstar/examples/: boundary_bench.rs  engine_check.rs
crates/globstar/src/: ast.rs  dir_match.rs  error.rs  factor.rs  lib.rs  matcher.rs  options.rs  parser.rs
crates/globstar/src/engine/: facts.rs  fxhash.rs  literal.rs  mod.rs  ops.rs  pikevm.rs  thompson.rs  thompson_dfa.rs
crates/globstar/src/engine/ops/: ir.rs  lower.rs  mod.rs  normalize.rs  prefixes.rs
crates/globstar/src/engine/segment/: compile.rs  exec.rs  mod.rs  seg_nfa.rs
crates/globstar/tests/: ast.rs  compiler_stages.rs  corpus.rs  glob.rs  glob_union.rs  parser.rs  star_normalization.rs
crates/globstar/tests/corpus/: README.md  corpus-absolute.txt  corpus-case.txt  corpus-class.txt  corpus-comprehensive.txt  corpus-dir.txt  corpus-err.txt  corpus-fast-glob-diff.txt  corpus-fast-glob.txt  corpus-multi.txt  corpus-realworld.txt  corpus-unix.txt  corpus-utf8.txt  corpus-windows.txt  corpus.txt
fixtures/: compiler-stages.tsv
fixtures/vite-vanilla/: package.json
references/decisions/: js-rust-consistency-direction.md  segment-engine-design.md
references/spec/: GLOB_SPEC.md  WALKER_SPEC.md
references/theory/: 00-index.md  01-glob-as-regular-language.md  02-thompson-nfa.md  03-subset-construction-dfa.md  04-pike-vm.md  05-literal-prefilter.md  06-walker-and-pruning.md  07-segment-matcher.md
tools/difftest/: Cargo.toml
tools/difftest/src/: main.rs
tools/memory-check/: Cargo.toml
tools/memory-check/src/: matcher_multi_memory.rs  matcher_single_memory.rs
