[package]
name = "globstar-segment"
description = "Segment-structured glob matcher (SSM) — experimental engine benchmarked against the globstar crate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
globstar = { workspace = true }
