[package]
name = "globstar"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Cross-platform, high-performance glob matching library."

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
globset = "0.4"
fast-glob = "0.4"
wax = "0.6"
glob = "0.3"
# Dev-only cycle (allowed by cargo): the corpus driver and benches run
# the experimental segment engine side-by-side with this crate's own.
globstar-segment = { workspace = true }

# Single-pattern engine head-to-head: globstar(DFA) vs globstar(PikeVM)
# vs fast_glob. Mirrored by JS-side
# `packages/bench/benches/matcher_single.js`.
[[bench]]
name = "matcher_single"
harness = false

# Multi-pattern union vs OR for DFA + PikeVM, plus 3rd-party libs
# (globset / wax / fast_glob / glob). Mirrored by JS-side
# `packages/bench/benches/matcher_multi.js`.
[[bench]]
name = "matcher_multi"
harness = false

[[bench]]
name = "compiler_stages"
harness = false

[lints.rust]
unsafe_code = "forbid"
