[package]
name = "memory-check"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
globstar = { path = "../../crates/globstar" }
globset = "0.4"
wax = "0.6"

# Single-pattern memory: globstar (DFA / PikeVM) vs globset / wax,
# matching the 7-pattern corpus in
# `packages/bench/benches/matcher_single.js`.
[[bin]]
name = "matcher-single-memory"
path = "src/matcher_single_memory.rs"

# Multi-pattern memory: globstar (union / per-pattern) vs globset / wax,
# matching the 5 sets in `packages/bench/benches/matcher_multi.js`
# and `crates/globstar/benches/matcher_multi.rs`.
[[bin]]
name = "matcher-multi-memory"
path = "src/matcher_multi_memory.rs"
